--- a/frontendpractice.html
+++ b/frontendpractice.html
@@ -42,8 +42,8 @@
 
 
     <div class="jumbotron">
-      <h1>Coffee Lover Project</h1>
-      <p>Welcome to your Bootstrap Project: Coffee Lover</p>
+      <h1>Practice Project</h1>
+      <p>Welcome to your Bootstrap Project: Assesment bootstrap site</p>
       <p>You will recreate this webpage and an additional Form Page</p>
       <p>Just follow the instruction steps here to re-create these webpages!</p>
 
